# blockchain-project

./: README.md
source/multiple-hash/: CMakeLists.txt  kernel.ocl  kernel2.ocl  main.cpp
source/single-hash/: kernel.ocl  kernel2.ocl  main.cpp
